added user-mailer to notify followings

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,11 @@
 
 <%= form_for(@user) do |f| %>
   <%= render 'fields', :f => f %>
+  
+  <div class="field">
+    <%= f.check_box :email_notifications %> Recieve email notifications?
+  </div>
+  
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
