finished with account activation

--- a/app/views/user_mailer/registration_confirmation.text.erb
+++ b/app/views/user_mailer/registration_confirmation.text.erb
@@ -1,3 +1,9 @@
-<%= @user.name %>,
-Thank you for registering!  Your user name is: <%= @user.username %>
+<%= @name %>,
+Thank you for registering!  Your user name is: <%= @username %>
+
+Please click the following link to activate your account:
+<%= "http://#{@domain}/sessions/#{@key}/activation" %>
+
+
+
 
